# advancecomp

./: .gitignore  .travis.yml  AUTHORS  HISTORY  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  check.lst  compress.cc  compress.h  config.h.in  configure  configure.ac  configure.darwin  configure.dos  configure.msdos  configure.windows  configure.windows-x64  configure.windows-x86  data.cc  data.h  except.h  file.cc  file.h  getopt.c  makedist.sh  mngex.cc  mngex.h  pngex.cc  pngex.h  portable.c  portable.h  redef.cc  remng.cc  repng.cc  rezip.cc  scroll.cc  (+9 more)
.github/workflows/: build.yml
7z/: 7zdeflate.cc  7zlzma.cc  AriBitCoder.h  BinTree.h  BinTreeMain.h  BitTreeCoder.h  DeflateDecoder.cc  HuffmanEncoder.cc  IInOutStreams.cc  IInOutStreams.h  InByte.cc  InByte.h  LZMADecoder.cc  LZMADecoder.h  LZMAEncoder.cc  LZMAEncoder.h  LiteralCoder.h  OutByte.cc  OutByte.h  Portable.h  README  RangeCoder.h  WindowIn.cc  WindowIn.h  WindowOut.cc  WindowOut.h
doc/: advdef.1  advdef.d  advdef.html  advdef.txt  advmng.1  advmng.d  advmng.html  advmng.txt  advpng.1  advpng.d  advpng.html  advpng.txt  advzip.1  advzip.d  advzip.html  advzip.txt  authors.1  authors.d  authors.html  authors.txt  history.1  history.d  history.html  history.txt  install.1  install.d  install.html  install.txt  readme.1  readme.d  readme.html  readme.txt
lib/: endianrw.h  error.c  error.h  extra.h  fz.c  fz.h  mng.c  mng.h  png.c  png.h  snstring.c  snstring.h
libdeflate/: adler32.c  crc32.c  deflate_decompress.c  lib_common.h  matchfinder_common.h
test/: test.lst
zopfli/: lz77.c  util.c
